--- a/config.h.in
+++ b/config.h.in
@@ -32,6 +32,7 @@
 #cmakedefine HAVE_FSEEKO
 #cmakedefine HAVE_FTELLO
 #cmakedefine HAVE_GETPROGNAME
+#cmakedefine HAVE_GETSECURITYINFO
 #cmakedefine HAVE_GNUTLS
 #cmakedefine HAVE_LIBBZ2
 #cmakedefine HAVE_LIBLZMA
@@ -41,7 +42,6 @@
 #cmakedefine HAVE_MEMCPY_S
 #cmakedefine HAVE_MBEDTLS
 #cmakedefine HAVE_MKSTEMP
-#cmakedefine HAVE_NULLABLE
 #cmakedefine HAVE_OPENSSL
 #cmakedefine HAVE_SETMODE
 #cmakedefine HAVE_SNPRINTF
